@@ -18,6 +18,7 @@ import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import org.junit.jupiter.api.Assertions;
+
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -33,6 +34,7 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.lenient;
@@ -120,6 +122,7 @@ import uk.gov.justice.laa.portal.landingpage.service.NotificationService;
 import uk.gov.justice.laa.portal.landingpage.service.OfficeService;
 import uk.gov.justice.laa.portal.landingpage.service.RoleAssignmentService;
 import uk.gov.justice.laa.portal.landingpage.service.UserAccountStatusService;
+import uk.gov.justice.laa.portal.landingpage.service.UserReactivationRequestService;
 import uk.gov.justice.laa.portal.landingpage.service.UserService;
 import uk.gov.justice.laa.portal.landingpage.techservices.SendUserVerificationEmailResponse;
 import uk.gov.justice.laa.portal.landingpage.techservices.TechServicesApiResponse;
@@ -165,6 +168,8 @@ class UserControllerTest {
     private UserAccountStatusService disableUserService;
     @Mock
     private NotificationService notificationService;
+    @Mock
+    private UserReactivationRequestService userReactivationRequestService;
     private Model model;
     private FirmSearchForm firmSearchForm;
 
@@ -172,10 +177,10 @@ class UserControllerTest {
     void setUp() {
         userController = new UserController(loginService, userService, officeService, eventService, firmService,
                 new MapperConfig().modelMapper(), accessControlService, roleAssignmentService, emailValidationService,
-                appRoleService, appService, disableUserService, notificationService);
+                appRoleService, appService, disableUserService, notificationService, userReactivationRequestService);
         userController.disableUserFeatureEnabled = true;
         lenient().when(accessControlService.getEnablementFlags(any()))
-                .thenReturn(new AccessControlService.EnablementFlags(false, false));
+                .thenReturn(new AccessControlService.EnablementFlags(false, false, false));
         model = new ExtendedModelMap();
         firmSearchForm = FirmSearchForm.builder().build();
     }
@@ -203,7 +208,7 @@ class UserControllerTest {
         assertThat(view).isEqualTo("enable-user-completed");
         assertThat(model.getAttribute("user")).isEqualTo(enabledUser);
         assertThat(model.getAttribute("referer")).isEqualTo(referer);
-        assertThat(model.getAttribute(ModelAttributes.PAGE_TITLE)).isEqualTo("Enable User Success - " + enabledUser.getFullName());
+        assertThat(model.getAttribute(ModelAttributes.PAGE_TITLE)).isEqualTo("Reactivate User Success - " + enabledUser.getFullName());
     }
 
     @Test
@@ -344,7 +349,8 @@ class UserControllerTest {
         when(userService.getPageOfUsersBySearch(any(UserSearchCriteria.class), anyInt(), anyInt(), any(),
                 any())).thenReturn(paginatedUsers);
 
-        String view = userController.displayAllUsers(10, 1, null, null, null, "", false, false, false, firmSearchForm,
+        String view = userController.displayAllUsers(10, 1, null, null, null, "", false, false, false, false, null,
+                firmSearchForm,
                 model,
                 session,
                 authentication);
@@ -361,12 +367,16 @@ class UserControllerTest {
     void givenUsersExist_whenDisplayAllUsers_thenPopulatesModelAndReturnsUsersView() {
         // Arrange
         PaginatedUsers mockPaginatedUsers = new PaginatedUsers();
-        UserSearchResultsDto userSearchResultsDto1 = new UserSearchResultsDto(UUID.randomUUID(), true, UserType.EXTERNAL,
-                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.INCOMPLETE, false, "Test", "User", "Test User",
-                "test@example.com", UserStatus.ACTIVE, "Test Firm",  InvitationStatus.INVITE_SENT, true, true);
-        UserSearchResultsDto userSearchResultsDto2 = new UserSearchResultsDto(UUID.randomUUID(), true, UserType.EXTERNAL,
-                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.COMPLETE, false, "Test", "User", "Test User",
-                "test@example.com", UserStatus.ACTIVE, "Test Firm",  InvitationStatus.INVITE_SENT, true, true);
+        UserSearchResultsDto userSearchResultsDto1 = new UserSearchResultsDto(UUID.randomUUID(), true,
+                UserType.EXTERNAL,
+                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.INCOMPLETE, false, "Test", "User",
+                "Test User",
+                "test@example.com", UserStatus.ACTIVE, "Test Firm", InvitationStatus.INVITE_SENT, true, true);
+        UserSearchResultsDto userSearchResultsDto2 = new UserSearchResultsDto(UUID.randomUUID(), true,
+                UserType.EXTERNAL,
+                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.COMPLETE, false, "Test", "User",
+                "Test User",
+                "test@example.com", UserStatus.ACTIVE, "Test Firm", InvitationStatus.INVITE_SENT, true, true);
         mockPaginatedUsers.setUsers(List.of(userSearchResultsDto1, userSearchResultsDto2));
         mockPaginatedUsers.setNextPageLink("nextLink123");
         mockPaginatedUsers.setPreviousPageLink("prevLink456");
@@ -383,7 +393,7 @@ class UserControllerTest {
 
         // Act
         String viewName = userController.displayAllUsers(10, 1, null, null, null,
-                "", false, false, false, firmSearchForm, model, session, authentication);
+                "", false, false, false, false, null, firmSearchForm, model, session, authentication);
 
         // Assert
         assertThat(viewName).isEqualTo("users");
@@ -432,7 +442,8 @@ class UserControllerTest {
         when(session.getAttribute("successMessage")).thenReturn(null);
         when(session.getAttribute("firmSearchForm")).thenReturn(null);
         // Act
-        String viewName = userController.displayAllUsers(10, 1, null, null, null, null, false, false, false,
+        String viewName = userController.displayAllUsers(10, 1, null, null, null, null, false, false, false, false,
+                null,
                 firmSearchForm,
                 model, session,
                 authentication);
@@ -445,7 +456,7 @@ class UserControllerTest {
     }
 
     @Test
-    void testDisplayAllUsersSearchesUsersWithSortWhenSearchTermIsGiven() {
+    void testDisplayAllUsersSearchesUsersWithSortWhenSearchTermIswhen() {
         // Arrange
         PaginatedUsers mockPaginatedUsers = new PaginatedUsers();
         mockPaginatedUsers.setUsers(new ArrayList<>());
@@ -456,7 +467,8 @@ class UserControllerTest {
         when(firmService.getUserFirm(any())).thenReturn(Optional.of(firmDto));
         when(loginService.getCurrentEntraUser(any())).thenReturn(EntraUser.builder().build());
         // Act
-        String viewName = userController.displayAllUsers(10, 1, "firstName", null, null, "", false, false, false,
+        String viewName = userController.displayAllUsers(10, 1, "firstName", null, null, "", false, false, false, false,
+                null,
                 firmSearchForm, model,
                 session,
                 authentication);
@@ -486,7 +498,7 @@ class UserControllerTest {
 
         // Act
         String viewName = userController.displayAllUsers(10, 1, "firstname", "desc", null, "",
-                false, false, false, firmSearchForm, model, session, authentication);
+                false, false, false, false, null, firmSearchForm, model, session, authentication);
 
         // Assert
         assertThat(viewName).isEqualTo("users");
@@ -523,7 +535,7 @@ class UserControllerTest {
 
         // backButton is true, no new filter parameters provided
         String view = userController.displayAllUsers(10, 1, null, null, null, "", false,
-                true, false, firmSearchForm, model, testSession, authentication);
+                true, false, false, null, firmSearchForm, model, testSession, authentication);
 
         assertThat(view).isEqualTo("users");
         // Verify filters were restored from session
@@ -579,7 +591,7 @@ class UserControllerTest {
                 .offices(Set.of())
                 .userType(UserType.INTERNAL)
                 .build();
-        String userId = "user42";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
         entraUser.setId(userId);
         entraUser.setFullName("Managed User");
@@ -599,7 +611,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -625,7 +638,7 @@ class UserControllerTest {
                 .offices(Set.of())
                 .userType(UserType.EXTERNAL)
                 .build();
-        String userId = "user42";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
         entraUser.setId(userId);
         entraUser.setFullName("External User Admin");
@@ -648,7 +661,8 @@ class UserControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(eq(Permission.EDIT_USER_DETAILS))).thenReturn(true);
         userController.editUserDetailFeatureEnabled = true;
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
 
@@ -664,7 +678,7 @@ class UserControllerTest {
     @Test
     void manageUser_shouldAddActiveFiltersToModelWhenFiltersArePresent() {
         // Arrange
-        String userId = "user42";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
         entraUser.setId(userId);
         entraUser.setFullName("Managed User");
@@ -713,7 +727,8 @@ class UserControllerTest {
             Map<String, Object> userListFilters = new HashMap<>();
             userListFilters.put(filterKey, nonDefaultUserListFilters.get(filterKey));
             when(session.getAttribute("userListFilters")).thenReturn(userListFilters);
-            when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+            when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                    .thenReturn(UserProfileSilasStatus.COMPLETE);
 
             String view = userController.manageUser(userId, model, session, authentication);
 
@@ -756,7 +771,8 @@ class UserControllerTest {
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(accessControlService.canSendVerificationEmail(mockUser.getId().toString())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(mockUser.getId().toString(), model, session, authentication);
@@ -787,9 +803,9 @@ class UserControllerTest {
                 .build();
 
         UserProfile currentProfile = UserProfile.builder().userType(UserType.INTERNAL).build();
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason reason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("CyberRisk").label("Cyber risk").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason reason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("CyberRisk").label("Cyber risk").build();
         reason.setId(UUID.randomUUID());
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
@@ -803,10 +819,10 @@ class UserControllerTest {
         assertThat(view).isEqualTo("delete-user-reason");
         assertThat(model.getAttribute("deleteReasons")).isNotNull();
         @SuppressWarnings("unchecked")
-        List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons =
-                (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model.getAttribute("deleteReasons");
+        List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons = (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model
+                .getAttribute("deleteReasons");
         assertThat(reasons).hasSize(1);
-        assertThat(reasons.get(0).getCode()).isEqualTo("CyberRisk");
+        assertThat(reasons.getFirst().getCode()).isEqualTo("CyberRisk");
         verify(userService).getDeleteUserReasons(true);
     }
 
@@ -823,16 +839,18 @@ class UserControllerTest {
                 .entraUser(entraUserDto)
                 .userType(UserType.EXTERNAL)
                 .build();
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
-        when(userService.deleteExternalUser(anyString(), any(UUID.class), any(String.class))).thenReturn(DeletedUser.builder().build());
+        when(userService.deleteExternalUser(anyString(), any(UUID.class), any(String.class)))
+                .thenReturn(DeletedUser.builder().build());
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.EXTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
         // Act
@@ -859,7 +877,8 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
 
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
@@ -867,17 +886,16 @@ class UserControllerTest {
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.EXTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
 
         when(userService.deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        )).thenReturn(DeletedUser.builder().encounteredTsErrors(true).build());
+                eq(currentUser.getEntraOid()))).thenReturn(DeletedUser.builder().encounteredTsErrors(true).build());
 
         // Act
         String view = userController.deleteExternalUser(userProfileId, reasonId, authentication, session, model);
@@ -890,8 +908,7 @@ class UserControllerTest {
         verify(userService).deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        );
+                eq(currentUser.getEntraOid()));
         verify(eventService).logEvent(any(DeleteUserAttemptAuditEvent.class));
     }
 
@@ -910,7 +927,8 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
 
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
@@ -918,17 +936,16 @@ class UserControllerTest {
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.INTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
 
         when(userService.deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        )).thenThrow(new RuntimeException("Tech Services unavailable"));
+                eq(currentUser.getEntraOid()))).thenThrow(new RuntimeException("Tech Services unavailable"));
 
         // Act
         String view = userController.deleteExternalUser(userProfileId, reasonId, authentication, session, model);
@@ -941,8 +958,7 @@ class UserControllerTest {
         verify(userService).deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        );
+                eq(currentUser.getEntraOid()));
         verify(eventService).logEvent(any(DeleteUserAttemptAuditEvent.class));
     }
 
@@ -958,7 +974,7 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
         // Arrange
-        String userId = "user52";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
         entraUser.setId(userId);
         entraUser.setFullName("Managed User");
@@ -982,7 +998,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -1009,7 +1026,7 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
         // Arrange
-        String userId = "user52";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
         entraUser.setId(userId);
         entraUser.setFullName("Managed User");
@@ -1033,7 +1050,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -1297,7 +1315,7 @@ class UserControllerTest {
         testUserRole.setId("testUserAppRoleId");
         List<AppRoleDto> testUserRoles = List.of(testUserRole);
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
-        //setup app
+        // setup app
         String appId = String.valueOf(UUID.randomUUID());
         AppDto currentApp = new AppDto();
         currentApp.setId(appId);
@@ -1355,7 +1373,7 @@ class UserControllerTest {
         testUserRole.setId("testUserAppRoleId");
         List<AppRoleDto> testUserRoles = List.of(testUserRole);
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
-        //setup app
+        // setup app
         String appId = String.valueOf(UUID.randomUUID());
         AppDto currentApp = new AppDto();
         currentApp.setId(appId);
@@ -1390,7 +1408,7 @@ class UserControllerTest {
         UserProfileDto testUserProfile = new UserProfileDto();
         testUserProfile.setUserType(UserType.EXTERNAL);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(testUserProfile));
-        //setup App
+        // setup App
         AppDto currentApp = new AppDto();
         currentApp.setId("testAppId");
         currentApp.setName("testAppName");
@@ -1419,7 +1437,8 @@ class UserControllerTest {
         testSession.setAttribute("selectedApps", selectedApps);
         List<AppRoleDto> allRoles = List.of(testRole1, testRole2, testRole3);
         when(userService.getAppByAppId(currentApp.getId())).thenReturn(Optional.of(currentApp));
-        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.EXTERNAL, null)).thenReturn(allRoles);
+        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.EXTERNAL, null))
+                .thenReturn(allRoles);
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(roleAssignmentService.filterRoles(any(), any())).thenReturn(allRoles);
@@ -1472,7 +1491,8 @@ class UserControllerTest {
         testSession.setAttribute("selectedApps", selectedApps);
         List<AppRoleDto> allRoles = List.of(testRole1, testRole2, testRole3, testRole4);
         when(userService.getAppByAppId(currentApp.getId())).thenReturn(Optional.of(currentApp));
-        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.INTERNAL, null)).thenReturn(allRoles);
+        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.INTERNAL, null))
+                .thenReturn(allRoles);
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(roleAssignmentService.filterRoles(any(), any())).thenReturn(allRoles);
@@ -1727,7 +1747,7 @@ class UserControllerTest {
         session.setAttribute("selectedApps", List.of(app1Id, app2Id, app3Id));
         Map<Integer, List<String>> existingRoles = new HashMap<>();
         existingRoles.put(0, List.of("role1", "role2")); // app1 roles
-        existingRoles.put(1, List.of("role3"));          // app2 roles
+        existingRoles.put(1, List.of("role3")); // app2 roles
         existingRoles.put(2, List.of("role4", "role5")); // app3 roles
         session.setAttribute("editUserAllSelectedRoles", existingRoles);
 
@@ -1744,7 +1764,8 @@ class UserControllerTest {
         assertThat(updatedApps).containsExactly(app1Id, app3Id);
 
         @SuppressWarnings("unchecked")
-        Map<Integer, List<String>> updatedRoles = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
+        Map<Integer, List<String>> updatedRoles = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
         assertThat(updatedRoles).hasSize(2);
         assertThat(updatedRoles.get(0)).containsExactly("role1", "role2"); // app1 roles preserved at index 0
         assertThat(updatedRoles.get(1)).containsExactly("role4", "role5"); // app3 roles moved to index 1
@@ -1779,7 +1800,8 @@ class UserControllerTest {
         List<String> updatedApps = (List<String>) session.getAttribute("selectedApps");
         assertThat(updatedApps).containsExactly(app1Id, app2Id);
 
-        // Should not have created editUserAllSelectedRoles since there was no existing data to clean
+        // Should not have created editUserAllSelectedRoles since there was no existing
+        // data to clean
         assertThat(session.getAttribute("editUserAllSelectedRoles")).isNull();
     }
 
@@ -1829,7 +1851,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(2);
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app1").size()).isEqualTo(2);
@@ -1883,7 +1906,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(3);
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app2")).isNotNull();
@@ -1936,7 +1960,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(2);
         assertThat(selectedAppRolesGrouped.get("Unknown app")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
@@ -2061,7 +2086,8 @@ class UserControllerTest {
         // When
         String redirect = userController.editUserRolesCheckAnswerSubmit(userId.toString(), session, authentication);
 
-        // Then - duplicate key violation is handled gracefully; user still reaches confirmation
+        // Then - duplicate key violation is handled gracefully; user still reaches
+        // confirmation
         assertThat(redirect).isEqualTo("redirect:/admin/users/edit/" + userId + "/confirmation");
     }
 
@@ -2084,12 +2110,14 @@ class UserControllerTest {
         session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
         when(roleAssignmentService.canAssignRole(any(), any())).thenReturn(true);
         when(userService.updateUserRoles(any(), any(), any(), any()))
-                .thenThrow(new TechServicesClientException("Error while sending security group changes to Tech Services."));
+                .thenThrow(new TechServicesClientException(
+                        "Error while sending security group changes to Tech Services."));
 
         // When
         String redirect = userController.editUserRolesCheckAnswerSubmit(userId.toString(), session, authentication);
 
-        // Then - concurrent Tech Services failure is handled gracefully; user still reaches confirmation
+        // Then - concurrent Tech Services failure is handled gracefully; user still
+        // reaches confirmation
         assertThat(redirect).isEqualTo("redirect:/admin/users/edit/" + userId + "/confirmation");
     }
 
@@ -2161,7 +2189,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -2193,7 +2222,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -2224,7 +2254,8 @@ class UserControllerTest {
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession,  model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2234,7 +2265,8 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyAssociatedWithAnotherUser() throws IOException {
+    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyAssociatedWithAnotherUser()
+            throws IOException {
         // Given
         final String userId = "user123";
         EditUserDetailsForm form = new EditUserDetailsForm();
@@ -2256,7 +2288,8 @@ class UserControllerTest {
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession,  model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2266,7 +2299,8 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyRegisteredMultiFirmUser() throws IOException {
+    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyRegisteredMultiFirmUser()
+            throws IOException {
         // Given
         final String userId = "user123";
         EditUserDetailsForm form = new EditUserDetailsForm();
@@ -2284,13 +2318,13 @@ class UserControllerTest {
         when(userService.isMultiFirmUserByEmail(anyString())).thenReturn(true);
         when(emailValidationService.isValidEmailDomain(anyString())).thenReturn(true);
 
-
         BindingResult bindingResult = Mockito.mock(BindingResult.class);
         when(bindingResult.hasErrors()).thenReturn(true);
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2403,8 +2437,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2462,8 +2495,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2519,8 +2551,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2555,7 +2586,7 @@ class UserControllerTest {
                 .userProfileStatus(UserProfileStatus.COMPLETE)
                 .unrestrictedOfficeAccess(false)
                 .appRoles(List.of(AppRoleDto.builder()
-                                .name("other role")
+                        .name("other role")
                         .build()))
                 .build();
 
@@ -2582,8 +2613,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2618,7 +2648,7 @@ class UserControllerTest {
                 .userProfileStatus(UserProfileStatus.COMPLETE)
                 .unrestrictedOfficeAccess(false)
                 .appRoles(List.of(AppRoleDto.builder()
-                                .name(FIRM_USER_MANAGER.getDescription())
+                        .name(FIRM_USER_MANAGER.getDescription())
                         .build()))
                 .build();
 
@@ -2646,8 +2676,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2777,7 +2806,8 @@ class UserControllerTest {
         List<OfficeModel> selectOfficesDisplay = (List<OfficeModel>) model.getAttribute("userOffices");
         assertThat(selectOfficesDisplay).isNotEmpty();
         assertThat(selectOfficesDisplay.getFirst().getId()).isEqualTo(of1.getId());
-        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model.getAttribute("officesByCity");
+        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model
+                .getAttribute("officesByCity");
         assertThat(officesByCity).isNotNull();
         assertThat(officesByCity).containsKey("city");
         assertThat(officesByCity.get("city")).containsExactly(of1);
@@ -2810,7 +2840,8 @@ class UserControllerTest {
         // When
         userController.updateUserOfficesCheck(userId, model, testSession);
         // Then
-        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model.getAttribute("officesByCity");
+        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model
+                .getAttribute("officesByCity");
         assertThat(officesByCity).isNotNull();
         assertThat(officesByCity.keySet()).containsExactly("Birmingham", "London", "Other cities");
     }
@@ -2905,7 +2936,7 @@ class UserControllerTest {
 
         // backButton is false, new filter parameters provided
         String view = userController.displayAllUsers(20, 2, "firstName", "asc", "internal",
-                "new@test.com", false, false, false, firmSearchForm, model, testSession, authentication);
+                "new@test.com", false, false, false, false, null, firmSearchForm, model, testSession, authentication);
 
         assertThat(view).isEqualTo("users");
         // Verify new filters were used - for internal user with VIEW_INTERNAL_USER
@@ -2944,7 +2975,7 @@ class UserControllerTest {
         MockHttpSession testSession = new MockHttpSession();
         // No existing filters in session
         String view = userController.displayAllUsers(10, 1, null, null, null, "",
-                false, true, false, firmSearchForm, model, testSession, authentication);
+                false, true, false, false, null, firmSearchForm, model, testSession, authentication);
 
         assertThat(view).isEqualTo("users");
         verify(userService).getPageOfUsersBySearch(any(UserSearchCriteria.class), eq(1), eq(10), anyString(),
@@ -2975,7 +3006,7 @@ class UserControllerTest {
         when(session.getAttribute("successMessage")).thenReturn("User added successfully");
 
         String view = userController.displayAllUsers(10, 1, null, null, null, "",
-                true, true, true, firmSearchForm, model, session, authentication);
+                true, true, true, false, null, firmSearchForm, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("users");
@@ -3190,7 +3221,8 @@ class UserControllerTest {
         // When
         String view = userController.updateUserRoles(userId, rolesForm, bindingResult, 0, testSession, model);
 
-        // Then - should skip validation and proceed to next app rather than re-rendering the empty form
+        // Then - should skip validation and proceed to next app rather than
+        // re-rendering the empty form
         assertThat(view).isEqualTo("redirect:/admin/users/edit/" + userId + "/roles?selectedAppIndex=1");
     }
 
@@ -3218,7 +3250,8 @@ class UserControllerTest {
 
     @Test
     void updateUserRoles_whenSessionModelMissingAndValidationErrors_shouldProceedRatherThanThrow() {
-        // Given - session model is absent entirely (e.g. session expired or user posted directly)
+        // Given - session model is absent entirely (e.g. session expired or user posted
+        // directly)
         String userId = "550e8400-e29b-41d4-a716-446655440000";
         RolesForm rolesForm = new RolesForm();
 
@@ -3354,7 +3387,7 @@ class UserControllerTest {
 
         // When
         String view = userController.displayAllUsers(10, 1, null, null, "internal", "",
-                false, false, false, firmSearchForm, model, session, authentication);
+                false, false, false, false, null, firmSearchForm, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("users");
@@ -3381,7 +3414,7 @@ class UserControllerTest {
         when(session.getAttribute("firmSearchForm")).thenReturn(null);
         // When
         String view = userController.displayAllUsers(10, 1, null, null, null, "",
-                false, false, false, firmSearchForm, model, session, authentication);
+                false, false, false, false, null, firmSearchForm, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("users");
@@ -3418,8 +3451,9 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
 
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
-        entraUser.setId("id1");
+        entraUser.setId(userId);
         AppRoleDto appRoleDto = AppRoleDto.builder().app(AppDto.builder().enabled(true).build()).build();
         UserProfileDto userProfile = UserProfileDto.builder()
                 .id(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"))
@@ -3434,10 +3468,11 @@ class UserControllerTest {
                 .silasStatus(UserProfileSilasStatus.COMPLETE)
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("id1")).thenReturn(Optional.of(userProfile));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
-        String view = userController.manageUser("id1", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         assertThat(view).isEqualTo("manage-user");
         assertThat(model.getAttribute("user")).isEqualTo(userProfile);
@@ -3464,8 +3499,9 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
         // Given - Internal user
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
-        entraUser.setId("internal-user-id");
+        entraUser.setId(userId);
         UserProfileDto userProfile = UserProfileDto.builder()
                 .id(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"))
                 .entraUser(entraUser)
@@ -3475,12 +3511,13 @@ class UserControllerTest {
                 .build();
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("internal-user-id")).thenReturn(Optional.of(userProfile));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("internal-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3499,8 +3536,9 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
         // Given - External user without required permissions
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
-        entraUser.setId("external-user-id");
+        entraUser.setId(userId);
         UserProfileDto userProfile = UserProfileDto.builder()
                 .id(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"))
                 .entraUser(entraUser)
@@ -3510,7 +3548,7 @@ class UserControllerTest {
                 .build();
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(userProfile));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         // No edit permission
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(false);
@@ -3518,10 +3556,11 @@ class UserControllerTest {
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_USER_OFFICE)).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("external-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3543,8 +3582,9 @@ class UserControllerTest {
                 .build();
 
         // Given - External user
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
-        entraUser.setId("external-user-id");
+        entraUser.setId(userId);
         UserProfileDto userProfile = UserProfileDto.builder()
                 .id(UUID.fromString("550e8400-e29b-41d4-a716-446655440000"))
                 .entraUser(entraUser)
@@ -3559,16 +3599,17 @@ class UserControllerTest {
                 .build();
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(userProfile));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(true);
         when(accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)).thenReturn(true);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_USER_OFFICE)).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("external-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3602,14 +3643,16 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
 
+        String userId = UUID.randomUUID().toString();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(userProfile));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("external-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3646,18 +3689,20 @@ class UserControllerTest {
         UUID entraUserId = UUID.fromString("550e8400-e29b-41d4-a716-446655440001");
         entraUser.setId(entraUserId.toString());
 
+        String userId = UUID.randomUUID().toString();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(mockUser));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
         when(userService.isInternal(entraUserId.toString())).thenReturn(false);
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(userService.getProfileCountByEntraUserId(entraUserId)).thenReturn(2L);
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canDeleteFirmProfile("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("external-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3668,8 +3713,9 @@ class UserControllerTest {
     @Test
     void manageUser_shouldSetCanViewAllFirmsOfMultiFirmUserToFalse_whenUserLacksPermission() {
         // Given
+        String userId = UUID.randomUUID().toString();
         EntraUserDto entraUser = new EntraUserDto();
-        entraUser.setId("external-user-id");
+        entraUser.setId(userId);
         entraUser.setFullName("Managed User");
         entraUser.setMultiFirmUser(true);
 
@@ -3697,17 +3743,18 @@ class UserControllerTest {
         entraUser.setId(entraUserId.toString());
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
-        when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(mockUser));
+        when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
         when(userService.isInternal(entraUserId.toString())).thenReturn(false);
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(userService.getProfileCountByEntraUserId(entraUserId)).thenReturn(2L);
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canDeleteFirmProfile("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
-        String view = userController.manageUser("external-user-id", model, session, authentication);
+        String view = userController.manageUser(userId, model, session, authentication);
 
         // Then
         assertThat(view).isEqualTo("manage-user");
@@ -3751,7 +3798,8 @@ class UserControllerTest {
         when(userService.isAccessGranted(profileId.toString())).thenReturn(true);
         when(userService.getProfileCountByEntraUserId(entraUserId)).thenReturn(2L);
         when(accessControlService.canEditUser(profileId.toString())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
         // Use lenient() since this won't be called when viewing own profile
         lenient().when(accessControlService.canDeleteFirmProfile(profileId.toString())).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
@@ -3808,7 +3856,8 @@ class UserControllerTest {
         when(accessControlService.canDeleteFirmProfile(viewedProfileId.toString())).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
         when(accessControlService.canConvertUserToMultiFirm(entraUserId.toString())).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(viewedProfileId.toString(), model, session, authentication);
@@ -3893,7 +3942,7 @@ class UserControllerTest {
     @Test
     void addUserCheckAnswers_shouldCallCreateUserAndRedirect() {
         MockHttpSession mockSession = new MockHttpSession();
-        FirmDto firmDto =  FirmDto.builder().id(UUID.randomUUID()).build();
+        FirmDto firmDto = FirmDto.builder().id(UUID.randomUUID()).build();
         EntraUserDto user = new EntraUserDto();
         mockSession.setAttribute("user", user);
         mockSession.setAttribute("isUserManager", true);
@@ -4290,7 +4339,7 @@ class UserControllerTest {
                 .userType(UserType.INTERNAL)
                 .build();
         // Given
-        String userId = "user123";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto user = new EntraUserDto();
         user.setId(userId);
 
@@ -4304,7 +4353,8 @@ class UserControllerTest {
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(userId, model, session, authentication);
@@ -4323,7 +4373,7 @@ class UserControllerTest {
     void manageUser_shouldHandleNullAppRolesAndOffices() {
         // Given - simulates a newly created multi-firm user without initial profile
         // data
-        String userId = "user123";
+        String userId = UUID.randomUUID().toString();
         EntraUserDto user = new EntraUserDto();
         user.setId(userId);
         user.setFirstName("Test");
@@ -4350,7 +4400,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted(any())).thenReturn(false);
         when(accessControlService.canEditUser(any())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(userId, model, session, authentication);
@@ -4430,8 +4481,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5040,8 +5090,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
 
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
@@ -5110,8 +5159,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(officeService.getOfficesByFirms(anyList())).thenReturn(allOffices);
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
@@ -5125,7 +5173,6 @@ class UserControllerTest {
         assertThat(model.getAttribute("hasAllOffices")).isEqualTo(false);
         assertThat(model.getAttribute("hasNoOffices")).isEqualTo(false);
         assertThat(model.getAttribute("shouldShowNoOffice")).isEqualTo(false);
-
 
         @SuppressWarnings("unchecked")
         List<OfficeModel> officeData = (List<OfficeModel>) model.getAttribute("officeData");
@@ -5167,8 +5214,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5219,8 +5265,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5271,8 +5316,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5328,8 +5372,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(GLOBAL_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5385,8 +5428,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(GLOBAL_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5506,7 +5548,8 @@ class UserControllerTest {
     }
 
     @Test
-    void grantAccessUpdateUserOffices_shouldReturnToOfficeSelectionIfSessionIsEmptyOnValidationErrors() throws IOException {
+    void grantAccessUpdateUserOffices_shouldReturnToOfficeSelectionIfSessionIsEmptyOnValidationErrors()
+            throws IOException {
         // Given
         final String userId = "550e8400-e29b-41d4-a716-446655440010";
         OfficesForm officesForm = new OfficesForm();
@@ -5568,7 +5611,8 @@ class UserControllerTest {
         assertThat(model.getAttribute("isCcmsApp")).isEqualTo(true);
         // When no CCMS roles exist, should have empty map with all sections initialized
         assertThat(model.getAttribute("ccmsRolesBySection")).isNotNull();
-        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model.getAttribute("ccmsRolesBySection");
+        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model
+                .getAttribute("ccmsRolesBySection");
         assertThat(ccmsRolesBySection).containsKeys("Provider", "Chambers", "Advocate", "Other");
         assertThat(ccmsRolesBySection.get("Provider")).isEmpty();
         assertThat(ccmsRolesBySection.get("Chambers")).isEmpty();
@@ -5630,7 +5674,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -5912,7 +5957,8 @@ class UserControllerTest {
         assertThat(model.getAttribute("isCcmsApp")).isEqualTo(true);
         // When no CCMS roles exist, should have empty map with all sections initialized
         assertThat(model.getAttribute("ccmsRolesBySection")).isNotNull();
-        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model.getAttribute("ccmsRolesBySection");
+        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model
+                .getAttribute("ccmsRolesBySection");
         assertThat(ccmsRolesBySection).containsKeys("Provider", "Chambers", "Advocate", "Other");
         assertThat(ccmsRolesBySection.get("Provider")).isEmpty();
         assertThat(ccmsRolesBySection.get("Chambers")).isEmpty();
@@ -5972,7 +6018,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -6079,10 +6126,12 @@ class UserControllerTest {
         assertThat(ccmsRolesBySection).isNotNull();
 
         // Verify Provider section contains firm, office, and cross office roles
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(firmRoleViewModel, officeRoleViewModel, crossOfficeRoleViewModel);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(firmRoleViewModel, officeRoleViewModel,
+                crossOfficeRoleViewModel);
 
         // Verify Chambers section contains chambers and counsel roles
-        assertThat(ccmsRolesBySection.get("Chambers")).containsExactlyInAnyOrder(chambersRoleViewModel, counselRoleViewModel);
+        assertThat(ccmsRolesBySection.get("Chambers")).containsExactlyInAnyOrder(chambersRoleViewModel,
+                counselRoleViewModel);
 
         // Verify Advocate section contains advocate role
         assertThat(ccmsRolesBySection.get("Advocate")).containsExactly(advocateRoleViewModel);
@@ -6143,9 +6192,9 @@ class UserControllerTest {
 
         // Create roles - mix of CCMS and non-CCMS roles
         List<AppRoleDto> roles = List.of(
-                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"),  // CCMS role
-                createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null),               // Non-CCMS role
-                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE")     // CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"), // CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null), // Non-CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE") // CCMS role
         );
 
         MockHttpSession testSession = new MockHttpSession();
@@ -6241,7 +6290,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -6468,7 +6518,8 @@ class UserControllerTest {
         when(roleAssignmentService.canAssignRole(any(), anyCollection())).thenReturn(true);
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
@@ -6504,7 +6555,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfileDto));
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/journey-completed");
@@ -6542,7 +6594,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(roleAssignmentService.canAssignRole(any(), anyList())).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
@@ -6579,7 +6632,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(accessControlService.canAssignExternalAppRoles(userId)).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -6605,7 +6659,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(accessControlService.canAssignInternalAppRoles(userId)).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -6637,9 +6692,11 @@ class UserControllerTest {
                         "could not execute statement; constraint [user_profile_app_role_pkey]"));
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
-        // Then - duplicate key violation from concurrent submit is handled gracefully; user still reaches confirmation
+        // Then - duplicate key violation from concurrent submit is handled gracefully;
+        // user still reaches confirmation
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
         assertThat(testSession.getAttribute("allSelectedRoles")).isNull();
         assertThat(testSession.getAttribute("selectedOffices")).isNull();
@@ -6916,8 +6973,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
 
-
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -6931,7 +6988,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -6959,7 +7017,8 @@ class UserControllerTest {
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.DEFAULT)).thenReturn(List.of(reason));
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -6973,7 +7032,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -6982,30 +7042,32 @@ class UserControllerTest {
         // Given
         UUID userId = UUID.randomUUID();
         EntraUserDto returnedUser = EntraUserDto.builder()
-            .id(userId.toString())
-            .fullName("Test User")
-            .build();
+                .id(userId.toString())
+                .fullName("Test User")
+                .build();
         DisableUserReasonDto reason = DisableUserReasonDto.builder()
-            .id(UUID.randomUUID())
-            .name("Test Reason")
-            .description("A test reason.")
-            .build();
+                .id(UUID.randomUUID())
+                .name("Test Reason")
+                .description("A test reason.")
+                .build();
         DisableUserReasonForm form = new DisableUserReasonForm();
         form.setReasonId(reason.getId().toString());
 
         when(userService.getEntraUserById(userId.toString())).thenReturn(Optional.of(returnedUser));
-        when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.IS_USER_DISABLE)).thenReturn(List.of(reason));
+        when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.IS_USER_DISABLE))
+                .thenReturn(List.of(reason));
 
         Set<AppRole> editorRoles = Set.of(AppRole.builder()
-            .name(FIRM_USER_MANAGER.getDescription())
-            .build());
+                .name(FIRM_USER_MANAGER.getDescription())
+                .build());
         when(loginService.getCurrentProfile(authentication))
-            .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
+                .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
 
         String referer = "audit";
         String profileId = UUID.randomUUID().toString();
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -7019,7 +7081,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
     }
 
     @Test
@@ -7049,7 +7112,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -7063,7 +7127,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -7097,13 +7162,15 @@ class UserControllerTest {
         when(loginService.getCurrentEntraUser(any())).thenReturn(authenticatedUser);
 
         String referer = "manage";
-        String view = userController.disableUserReasonsPost(userId.toString(), form, result, authentication, model, session, referer);
+        String view = userController.disableUserReasonsPost(userId.toString(), form, result, authentication, model,
+                session, referer);
 
         Assertions.assertEquals("disable-user-completed", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
         Assertions.assertEquals(form, model.getAttribute("disableUserReasonsForm"));
         Assertions.assertEquals(model.getAttribute("referer"), referer);
-        Assertions.assertEquals("Disable User Success - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User Success - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
     }
 
     @Test
@@ -7119,7 +7186,6 @@ class UserControllerTest {
         errors.add(new ObjectError("Reason", "There was an error"));
         errors.add(new ObjectError("Reason", "There was another error"));
 
-
         DisableUserReasonForm form = new DisableUserReasonForm();
         form.setReasonId(reason.getId().toString());
 
@@ -7130,7 +7196,8 @@ class UserControllerTest {
         when(session.getAttribute(eq("disableUserReasonModel"))).thenReturn(model);
 
         String referer = "manage";
-        String view = userController.disableUserReasonsPost(UUID.randomUUID().toString(), form, result, authentication, model, session, referer);
+        String view = userController.disableUserReasonsPost(UUID.randomUUID().toString(), form, result, authentication,
+                model, session, referer);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals("There was an error\nThere was another error", model.getAttribute("errorMessage"));
@@ -7210,7 +7277,7 @@ class UserControllerTest {
             // When
             String viewName = userController.displayAllUsers(
                     10, 1, null, null, null, null, false,
-                    false, false, firmSearchForm, model, session, authentication);
+                    false, false, false, null, firmSearchForm, model, session, authentication);
 
             // Then
             assertThat(viewName).isEqualTo("users");
@@ -7234,7 +7301,7 @@ class UserControllerTest {
             // When
             String viewName = userController.displayAllUsers(
                     10, 1, null, null, null, "", false,
-                    false, false, firmSearchForm, model, session, authentication);
+                    false, false, false, null, firmSearchForm, model, session, authentication);
 
             // Then
             assertThat(viewName).isEqualTo("users");
@@ -7256,7 +7323,7 @@ class UserControllerTest {
             FirmSearchForm searchForm = FirmSearchForm.builder().selectedFirmId(UUID.randomUUID()).build();
             assertThrows(RuntimeException.class, () -> userController.displayAllUsers(
                     10, 1, null, null, null, "", false,
-                    false, false, searchForm, model, session, authentication));
+                    false, false, false, null, searchForm, model, session, authentication));
         }
 
         @Test
@@ -7271,7 +7338,7 @@ class UserControllerTest {
             // When
             String viewName = userController.displayAllUsers(
                     10, 1, null, null, null, "", false,
-                    false, false, firmSearchForm, model, session, authentication);
+                    false, false, false, null, firmSearchForm, model, session, authentication);
 
             // Then
             assertThat(viewName).isEqualTo("users");
@@ -7291,7 +7358,7 @@ class UserControllerTest {
             // When
             String viewName = userController.displayAllUsers(
                     10, 1, null, null, null, "", false,
-                    false, false, firmSearchForm, model, session, authentication);
+                    false, false, false, null, firmSearchForm, model, session, authentication);
 
             // Then
             assertThat(viewName).isEqualTo("users");
@@ -7563,8 +7630,11 @@ class UserControllerTest {
                 assertThat(anno.value().equals("@accessControlService.canEditUserAppRoleAssignments(#id)")
                         || anno.value().equals("@accessControlService.canEditUser(#id)")
                         || anno.value().equals("@accessControlService.canGrantUserAccess(#id)")
-                        || anno.value().equals("@accessControlService.canGrantUserAccess(#id) && @accessControlService.canRemoveAppRoles(#id)")
-                        || anno.value().equals("@accessControlService.canAssignAppRoles(#id) || @accessControlService.canRemoveAppRoles(#id) || @accessControlService.canEditUser(#id)")).isTrue();
+                        || anno.value().equals(
+                                "@accessControlService.canGrantUserAccess(#id) && @accessControlService.canRemoveAppRoles(#id)")
+                        || anno.value().equals(
+                                "@accessControlService.canAssignAppRoles(#id) || @accessControlService.canRemoveAppRoles(#id) || @accessControlService.canEditUser(#id)"))
+                        .isTrue();
                 continue;
             }
             if (canAcessMethods.contains(method.getName())) {
@@ -8034,7 +8104,8 @@ class UserControllerTest {
             when(roleAssignmentService.filterRoles(any(), any())).thenReturn(List.of(chambersRole1, chambersRole2));
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.CHAMBERS);
@@ -8045,7 +8116,8 @@ class UserControllerTest {
             UUID userId = UUID.randomUUID();
             MockHttpSession testSession = new MockHttpSession();
             testSession.setAttribute("selectedApps", List.of("app-id-1"));
-            FirmDto advocateFirm = FirmDto.builder().id(UUID.randomUUID()).name("Advocate Firm").type(FirmType.ADVOCATE).build();
+            FirmDto advocateFirm = FirmDto.builder().id(UUID.randomUUID()).name("Advocate Firm").type(FirmType.ADVOCATE)
+                    .build();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
                     .userType(UserType.EXTERNAL)
@@ -8072,7 +8144,8 @@ class UserControllerTest {
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
 
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.ADVOCATE);
@@ -8107,11 +8180,13 @@ class UserControllerTest {
                     .thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
             when(loginService.getCurrentProfile(authentication))
                     .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
-            when(roleAssignmentService.filterRoles(any(), any())).thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
+            when(roleAssignmentService.filterRoles(any(), any()))
+                    .thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
 
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, null);
@@ -8131,8 +8206,7 @@ class UserControllerTest {
             List<AppRoleDto> roles = List.of(
                     createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"),
                     createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null),
-                    createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE")
-            );
+                    createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE"));
             UUID userId = UUID.randomUUID();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
@@ -8147,7 +8221,8 @@ class UserControllerTest {
             when(roleAssignmentService.filterRoles(any(), any())).thenReturn(roles);
 
             // When
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             // Then
             assertThat(view).isEqualTo("edit-user-roles");
@@ -8173,7 +8248,8 @@ class UserControllerTest {
             MockHttpSession testSession = new MockHttpSession();
             testSession.setAttribute("grantAccessSelectedApps", List.of("app-id-1"));
 
-            FirmDto lspFirm = FirmDto.builder().id(UUID.randomUUID()).name("LSP Firm").type(FirmType.LEGAL_SERVICES_PROVIDER).build();
+            FirmDto lspFirm = FirmDto.builder().id(UUID.randomUUID()).name("LSP Firm")
+                    .type(FirmType.LEGAL_SERVICES_PROVIDER).build();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
                     .userType(UserType.EXTERNAL)
@@ -8194,7 +8270,8 @@ class UserControllerTest {
 
             Model model = new ExtendedModelMap();
             when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.of(user));
-            when(userService.getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.LEGAL_SERVICES_PROVIDER))
+            when(userService.getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL,
+                    FirmType.LEGAL_SERVICES_PROVIDER))
                     .thenReturn(List.of(lspRole1, lspRole2));
             when(loginService.getCurrentProfile(authentication))
                     .thenReturn(UserProfile.builder().id(UUID.randomUUID()).appRoles(new HashSet<>()).build());
@@ -8203,10 +8280,12 @@ class UserControllerTest {
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
             when(accessControlService.canAssignExternalAppRoles(userId.toString())).thenReturn(true);
 
-            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication, model, testSession, redirectAttributes);
+            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication,
+                    model, testSession, redirectAttributes);
 
             assertThat(view).isEqualTo("grant-access-user-roles");
-            verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.LEGAL_SERVICES_PROVIDER);
+            verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL,
+                    FirmType.LEGAL_SERVICES_PROVIDER);
         }
 
         @Test
@@ -8244,7 +8323,8 @@ class UserControllerTest {
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
             when(accessControlService.canAssignInternalAppRoles(userId.toString())).thenReturn(true);
 
-            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication, model, testSession, redirectAttributes);
+            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication,
+                    model, testSession, redirectAttributes);
 
             assertThat(view).isEqualTo("grant-access-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.INTERNAL, null);
@@ -8309,7 +8389,6 @@ class UserControllerTest {
 
             FirmDto firm = FirmDto.builder().name("firmOne").id(selectedFirmId).build();
 
-
             UserProfileDto user = UserProfileDto.builder()
                     .id(UUID.fromString(userId))
                     .userType(UserType.EXTERNAL)
@@ -8325,7 +8404,8 @@ class UserControllerTest {
             when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
 
             // When
-            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne", "reassign", model,
+            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne",
+                    "reassign", model,
                     redirectAttributes);
 
             assertThat(model.getAttribute("errorMessage")).isEqualTo("An error occurred while loading the page");
@@ -8358,7 +8438,8 @@ class UserControllerTest {
             RedirectAttributes redirectAttributes = new RedirectAttributesModelMap();
 
             // When
-            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne", "reassign", model,
+            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne",
+                    "reassign", model,
                     redirectAttributes);
 
             assertThat(redirectAttributes.getFlashAttributes().get("errorMessage"))
@@ -8372,12 +8453,11 @@ class UserControllerTest {
         void resendActivationEmail_whenSuccess() {
             UUID userId = UUID.randomUUID();
 
-            TechServicesApiResponse<SendUserVerificationEmailResponse> successResponse =
-                    TechServicesApiResponse.success(
+            TechServicesApiResponse<SendUserVerificationEmailResponse> successResponse = TechServicesApiResponse
+                    .success(
                             SendUserVerificationEmailResponse.builder()
                                     .message("Verification email sent successfully")
-                                    .build()
-                    );
+                                    .build());
 
             when(userService.sendVerificationEmail(userId.toString())).thenReturn(successResponse);
             when(accessControlService.canSendVerificationEmail(userId.toString())).thenReturn(true);
@@ -8398,11 +8478,12 @@ class UserControllerTest {
         void resendActivationEmail_whenError() {
             UUID userId = UUID.randomUUID();
 
-            TechServicesApiResponse<SendUserVerificationEmailResponse> errorResponse =
-                    mock(TechServicesApiResponse.class, RETURNS_DEEP_STUBS);
+            TechServicesApiResponse<SendUserVerificationEmailResponse> errorResponse = mock(
+                    TechServicesApiResponse.class, RETURNS_DEEP_STUBS);
 
             when(errorResponse.isSuccess()).thenReturn(false);
-            when(errorResponse.getError().getMessage()).thenReturn("Failed to generate and send activation code via email.");
+            when(errorResponse.getError().getMessage())
+                    .thenReturn("Failed to generate and send activation code via email.");
 
             when(userService.sendVerificationEmail(userId.toString())).thenReturn(errorResponse);
             when(accessControlService.canSendVerificationEmail(userId.toString())).thenReturn(true);
